<resources>
    <string name="app_name">TaskR</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_profile">Profile</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="Name">Name</string>
    <string name="levelReq">Level Required</string>
    <string name="set">Set</string>
    <string name="defaultTheme">Reset</string>
    <string name="defaults">Default</string>
    <string name="rewardThemeName">Theme Name</string>
    <string name="title_reward">Rewards</string>
    <string name="completed">Completed</string>
    <string name="themeChange">Theme Change</string>
    <string name="book">Sticker Book</string>
    <string name="warning">Are you sure you want to delete task?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ccp">Cool Crumpled Paper</string>
    <string name="Psyduck">Psyduck</string>
    <string name="Computer">Computer</string>
    <string name="trash">Tilted Trash Can</string>
    <string name="hydro">Homie Hydro Flask</string>
    <string-array name="stickers_id">
        <item>@drawable/coolcrumpledpaper</item>
        <item>@drawable/computer_locked</item>
        <item>@drawable/image_locked</item>
    </string-array>
    <string-array name="sticker_titles">
        <item>Locked</item>
        <item>Locked</item>
        <item>Locked</item>
        <item>Locked</item>
        <item>Locked</item>
    </string-array>
    <string-array name="stickerUnlockedTitles">
        <item>Cool Crumpled Paper</item>
        <item>Homie Hydro Flask</item>
        <item>Tilted Trash Can</item>
        <item>Computer</item>
        <item>Psyduck</item>
    </string-array>
    <string-array name="sort">
        <item>Sort By</item>
        <item>Date Created - Oldest to Newest</item>
        <item>Date Created - Newest to Oldest</item>
        <item>Date Due</item>
        <item>Difficulty - Quick, Normal, Long</item>
        <item>Difficulty - Long, Normal, Quick</item>
    </string-array>
    <string-array name="difficulty">
        <item>Difficulty</item>
        <item>Quick</item>
        <item>Normal</item>
        <item>Long</item>
    </string-array>
</resources>
