<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <EditText
        android:id="@+id/newTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text" />

    <TextView
        android:id="@+id/newDate"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/newTitle"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:background="@drawable/bottomborder"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/date"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerDifficult"
        android:layout_marginTop="15dp"
        android:background="?attr/colorPrimaryDark"
        android:text="@string/cancel"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerDifficult"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/cancelButton"
        android:layout_toRightOf="@+id/cancelButton"
        android:background="?attr/colorPrimaryDark"
        android:text="@string/save"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/newDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newDate"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/newTime"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/newTitle"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toEndOf="@+id/newDate"
        android:layout_toRightOf="@+id/newDate"
        android:background="@drawable/bottomborder"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/time"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerDifficult"
        android:layout_width="401dp"
        android:layout_height="35dp"
        android:layout_below="@+id/newDescription"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="9dp"
        android:spinnerMode="dropdown" />

</RelativeLayout>