<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTest"
    android:paddingBottom="15dp"
    android:paddingLeft="20dp"
    android:paddingEnd="20dp"
    android:paddingRight="20dp"
    android:paddingStart="20dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/warningMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warning"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/yes"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/warningMessage"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:background="?attr/colorPrimaryDark"
        android:text="@string/yes"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/no"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/warningMessage"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="15dp"
        android:background="?attr/colorPrimaryDark"
        android:text="@string/no"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentRight="true"/>
</RelativeLayout>