<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:id="@+id/parent_layout">

    <TextView
        android:id="@+id/task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/task_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/date"
        android:textColor="@android:color/black"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/task_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_title"
        android:layout_centerVertical="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/task_date"
        android:layout_toRightOf="@id/task_date"
        android:text="@string/time"
        android:textColor="@android:color/black"
        android:textSize="17sp"/>

</RelativeLayout>